# lin-port

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TestSample.py  hash_gen  hash_gen.cpp  reencode_final.py  server.py  test_results.txt  test_sqlite.cpp
.github/workflows/: ci-build.yml  test-app.yml
cmake/: CompileOptions.cmake  toolchain-mingw.cmake
src/: main.cpp
src/beacon/: Beacon.cpp  Beacon.h  Task.h  TaskDispatcher.cpp  TaskDispatcher.h
src/capture/: Audio.cpp  Audio.h  Keylogger.cpp  Keylogger.h  Screenshot.cpp  Screenshot.h  Webcam.cpp  Webcam.h
src/core/: Config.h  ImplantId.cpp  Types.h
src/credential/: ChromiumStealer.cpp  ChromiumStealer.h  FirefoxStealer.cpp  FirefoxStealer.h  LsassDumper.cpp  LsassDumper.h  SystemCredentials.cpp  SystemCredentials.h
src/crypto/: AesGcm.cpp  AesGcm.h  Base64.cpp  Base64.h  Dpapi.cpp  Dpapi.h
src/decoy/: BSOD.cpp  BSOD.h  Decoy.cpp  Decoy.h  Pretext.cpp  Pretext.h
src/evasion/: AntiSandbox.cpp  AntiSandbox.h  Bloat.cpp  Bloat.h  Detection.cpp  Detection.h  Injector.cpp  Injector.h  JunkLogic.cpp  JunkLogic.h  NtStructs.h  SyscallStub.asm  SyscallStub_gas.s  SyscallStub_masm.asm  Syscalls.cpp  Syscalls.h  UACBypass.cpp  UACBypass.h  Unhooker.cpp  Unhooker.h
src/execution/: DotNetExecutor.cpp  DotNetExecutor.h  InMemory.cpp  InMemory.h  metahost.h
src/fs/: FileSystem.cpp  FileSystem.h
src/http/: HttpClient.cpp  HttpClient.h  RedirectorResolver.cpp  WinHttpClient.cpp  WinHttpClient.h
src/lateral/: ADEnum.cpp  ADEnum.h  BluetoothLateral.cpp  SvcExec.cpp  SvcExec.h  TaskExec.cpp  TaskExec.h  WirelessSpread.cpp  WirelessSpread.h  WmiExec.cpp  WmiExec.h
src/modules/: Lateral.cpp  Lateral.h
src/network/: SocksProxy.cpp  SocksProxy.h
src/persistence/: ComHijacker.cpp  ComHijacker.h  Persistence.cpp  Persistence.h  WmiPersistence.cpp  WmiPersistence.h
src/recon/: Decoy.cpp  Decoy.h  DeepRecon.cpp  DeepRecon.h  InstalledSoftware.cpp  InstalledSoftware.h  LateralMovement.cpp  LateralMovement.h  SysInfo.cpp  SysInfo.h  WmiHelpers.cpp  WmiHelpers.h
src/shell/: InteractiveShell.cpp  InteractiveShell.h
src/streaming/: Streamer.cpp  Streamer.h
src/utils/: ApiHasher.h  Cleanup.cpp  Cleanup.h  Exec.cpp  Exec.h  Logger.cpp  Logger.h  Obfuscator.h  Pretext.cpp  Pretext.h  SelfDelete.cpp  SelfDelete.h  Shared.cpp  Shared.h
src/wifi/: WifiDumper.cpp  WifiDumper.h  WifiScanner.cpp  WifiScanner.h
tests/: AesGcmTest.cpp  Base64Test.cpp
